# rummikub

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/rummikub/: hint.py  main.py  state.py  tile.py
tests/: test_hint.py
