[tool.poetry]
name = "rummikub"
version = "0.1.0"
description = ""
authors = ["Kasper Dokter <info@alefka.nl>"]
readme = "README.md"
packages = [{include = "rummikub", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
ortools = "^9.14.6206"
networkx = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"